lustre/osp/osp_precreate.c
@@ -112,12 +112,13 @@ static void osp_pre_update_msfs(struct osp_device *d, struct obd_statfs *msfs);
 static void osp_pre_update_status_msfs(struct osp_device *d,
 				       struct obd_statfs *msfs, int rc)
 {
+	CDEBUG(D_INFO, "%s: Updating status = %d\n", d->opd_obd->obd_name, rc);
 	if (rc)
 		d->opd_pre_status = rc;
 	else
 		osp_pre_update_msfs(d, msfs);
 
-	wake_up(&d->opd_pre_user_waitq);
+	wake_up_all(&d->opd_pre_user_waitq);
 }
 
 /* Pass in the old statfs data in case the limits have changed */
@@ -735,7 +736,6 @@ ready:
 out_req:
 	/* now we can wakeup all users awaiting for objects */
 	osp_pre_update_status(d, rc);
-	wake_up(&d->opd_pre_user_waitq);
 
 	/* let osp_precreate_reserve to continue */
 	CFS_FAIL_TIMEOUT(OBD_FAIL_OSP_PRECREATE_PAUSE, 2);
@@ -985,6 +985,7 @@ out:
 	if (req)
 		ptlrpc_req_finished(req);
 
+
 	/*
 	 * If rc is zero, the pre-creation window should have been emptied.
 	 * Since waking up the herd would be useless without pre-created
@@ -1001,7 +1002,7 @@ out:
 			 * this OSP isn't quite functional yet */
 			osp_pre_update_status(d, rc);
 		} else {
-			wake_up(&d->opd_pre_user_waitq);
+			wake_up_all(&d->opd_pre_user_waitq);
 		}
 	} else {
 		spin_lock(&d->opd_pre_lock);
@@ -1404,6 +1405,19 @@ static int osp_precreate_thread(void *_arg)
 static int osp_precreate_ready_condition(const struct lu_env *env,
 					 struct osp_device *d)
 {
+	/* Bail out I/O fails to OST */
+	if (d->opd_pre_status != 0 &&
+	    d->opd_pre_status != -EAGAIN &&
+	    d->opd_pre_status != -ENODEV &&
+	    d->opd_pre_status != -ENOTCONN &&
+	    d->opd_pre_status != -ENOSPC) {
+		/* DEBUG LU-3230 */
+		if (d->opd_pre_status != -EIO)
+			CERROR("%s: precreate failed opd_pre_status %d\n",
+			       d->opd_obd->obd_name, d->opd_pre_status);
+		return 1;
+	}
+
 	if (d->opd_pre_recovering)
 		return 0;
 
@@ -1417,19 +1431,6 @@ static int osp_precreate_ready_condition(const struct lu_env *env,
 	    atomic_read(&d->opd_sync_rpcs_in_progress) == 0 &&
 	    d->opd_pre_status == -ENOSPC)
 		return 1;
-
-	/* Bail out I/O fails to OST */
-	if (d->opd_pre_status != 0 &&
-	    d->opd_pre_status != -EAGAIN &&
-	    d->opd_pre_status != -ENODEV &&
-	    d->opd_pre_status != -ENOTCONN &&
-	    d->opd_pre_status != -ENOSPC) {
-		/* DEBUG LU-3230 */
-		if (d->opd_pre_status != -EIO)
-			CERROR("%s: precreate failed opd_pre_status %d\n",
-			       d->opd_obd->obd_name, d->opd_pre_status);
-		return 1;
-	}
 
 	return 0;
 }
@@ -1571,8 +1572,14 @@ int osp_precreate_reserve(const struct lu_env *env, struct osp_device *d,
 			break;
 		}
 
+		CDEBUG(D_INFO, "%s: Sleeping on objects\n",
+		       d->opd_obd->obd_name);
+
 		l_wait_event(d->opd_pre_user_waitq,
 			     osp_precreate_ready_condition(env, d), &lwi);
+
+		CDEBUG(D_INFO, "%s: Waked up, status=%d\n",
+			       d->opd_obd->obd_name, d->opd_pre_status);
 	}
 
 	RETURN(rc);
